cluster/apps/networking/external-svc/minio-truenas.yaml
---
kind: "Service"
apiVersion: "v1"
metadata:
  name: truenas-minio
  namespace: networking
spec:
  ports:
    - name: "truenas-minio"
      protocol: "TCP"
      port: 9000
      targetPort: 9000
      nodePort: 0
---
kind: "Endpoints"
apiVersion: "v1"
metadata:
  name: truenas-minio
  namespace: networking
subsets:
  - addresses:
      - ip: "${TRUENAS_ADDRESS}"
    ports:
      - port: 9000
        name: "truenas-minio"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    traefik.ingress.kubernetes.io/service.serversscheme: https
    external-dns.alpha.kubernetes.io/target: "${SECRET_CLOUDFLARE_TUNNEL_ID_1}.cfargotunnel.com"
  name: truenas-minio
  namespace: networking
spec:
  ingressClassName: "traefik"
  rules:
    - host: "minio.${SECRET_DOMAIN_CASA}"
      http:
        paths:
          - backend:
              service:
                name: truenas-minio
                port:
                  number: 9000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "minio.${SECRET_DOMAIN_CASA}"
