cluster/apps/networking/external-svc/omada-oc200.yaml
---
kind: "Service"
apiVersion: "v1"
metadata:
  name: omada-oc200
  namespace: networking
spec:
  ports:
    - name: "omada-oc200"
      protocol: "TCP"
      port: 443
      targetPort: 443
      nodePort: 0
---
kind: "Endpoints"
apiVersion: "v1"
metadata:
  name: omada-oc200
  namespace: networking
subsets:
  - addresses:
      - ip: "${OC200_ADDRESS}"
    ports:
      - port: 443
        name: "omada-oc200"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    traefik.ingress.kubernetes.io/service.serversscheme: https
    external-dns.alpha.kubernetes.io/target: "${SECRET_CLOUDFLARE_TUNNEL_ID_1}.cfargotunnel.com"
    traefik.ingress.kubernetes.io/router.middlewares: networking-omada-redirect@kubernetescrd,networking-omada-headers@kubernetescrd
  name: omada-oc200
  namespace: networking
spec:
  ingressClassName: "traefik"
  rules:
    - host: "omada.${SECRET_DOMAIN_CASA}"
      http:
        paths:
          - backend:
              service:
                name: omada-oc200
                port:
                  number: 443
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "omada.${SECRET_DOMAIN_CASA}"
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: omada-redirect
  namespace: networking
  annotations:
    kustomize.toolkit.fluxcd.io/substitute: disabled
spec:
  redirectRegex:
    regex: "https://([^/]+)/?$"
    replacement: "https://$1/login"
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: omada-headers
  namespace: networking
spec:
  headers:
    customRequestHeaders:
      Host: "omada.${SECRET_DOMAIN_CASA}:443"
    customResponseHeaders:
      Host: "omada.${SECRET_DOMAIN_CASA}"
