cluster/apps/networking/external-svc/qnap.yaml
---
kind: "Service"
apiVersion: "v1"
metadata:
  name: qnap
  namespace: networking
spec:
  ports:
    - name: "qnap"
      protocol: "TCP"
      port: 80
      targetPort: 80
      nodePort: 0
---
kind: "Endpoints"
apiVersion: "v1"
metadata:
  name: qnap
  namespace: networking
subsets:
  - addresses:
      - ip: "${QNAP_ADDRESS}"
    ports:
      - port: 80
        name: "qnap"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    traefik.ingress.kubernetes.io/service.serversscheme: https
    external-dns.alpha.kubernetes.io/target: "${SECRET_CLOUDFLARE_TUNNEL_ID_1}.cfargotunnel.com"
  name: qnap
  namespace: networking
spec:
  ingressClassName: "traefik"
  rules:
    - host: "qnap.${SECRET_DOMAIN_CASA}"
      http:
        paths:
          - backend:
              service:
                name: qnap
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "qnap.${SECRET_DOMAIN_CASA}"
