cluster/apps/networking/external-svc/truenas-nzbget.yaml
---
kind: "Service"
apiVersion: "v1"
metadata:
  name: nzbget
  namespace: media
spec:
  ports:
    - name: "nzbget"
      protocol: "TCP"
      port: 6789
      targetPort: 6789
      nodePort: 0
---
kind: "Endpoints"
apiVersion: "v1"
metadata:
  name: nzbget
  namespace: media
subsets:
  - addresses:
      - ip: "${TRUENAS_NZBGET_ADDRESS}"
    ports:
      - port: 6789
        name: "nzbget"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    traefik.ingress.kubernetes.io/service.serversscheme: https
    external-dns.alpha.kubernetes.io/target: "${SECRET_CLOUDFLARE_TUNNEL_ID_1}.cfargotunnel.com"
  name: nzbget
  namespace: media
spec:
  ingressClassName: "traefik"
  rules:
    - host: "nzbget.${SECRET_DOMAIN_CASA}"
      http:
        paths:
          - backend:
              service:
                name: nzbget
                port:
                  number: 6789
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "nzbget.${SECRET_DOMAIN_CASA}"
